tests/snapshots/formats__dds__bc7-array.dds.snap
---
source: tests/formats.rs
expression: "common::explore(&name, &data)"
---
▾ bc7-array.dds — 8×8, BC7_UNORM, 2 mip levels, 2 surfaces  [0x0+0x134]
  ▾ Header  [0x0+0x80]
      Magic: "DDS "  [0x0+0x4]
      dwSize: 124  [0x4+0x4]
      dwFlags: 0xa1007 [CAPS | HEIGHT | WIDTH | PIXELFORMAT | MIPMAPCOUNT | LINEARSIZE]  [0x8+0x4]
      dwHeight: 8  [0xc+0x4]
      dwWidth: 8  [0x10+0x4]
      dwPitchOrLinearSize: 64  [0x14+0x4]
      dwDepth: 0  [0x18+0x4]
      dwMipMapCount: 2  [0x1c+0x4]
      dwReserved1: 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 …  |................|  [0x20+0x2c]
      ddspf.dwSize: 32  [0x4c+0x4]
      ddspf.dwFlags: 0x4 [FOURCC]  [0x50+0x4]
      ddspf.dwFourCC: "DX10"  [0x54+0x4]
      ddspf.dwRGBBitCount: 0  [0x58+0x4]
      ddspf.dwRBitMask: 0x0  [0x5c+0x4]
      ddspf.dwGBitMask: 0x0  [0x60+0x4]
      ddspf.dwBBitMask: 0x0  [0x64+0x4]
      ddspf.dwABitMask: 0x0  [0x68+0x4]
      dwCaps: 0x401008 [COMPLEX | TEXTURE | MIPMAP]  [0x6c+0x4]
      dwCaps2: 0x0 []  [0x70+0x4]
      dwCaps3: 0  [0x74+0x4]
      dwCaps4: 0  [0x78+0x4]
      dwReserved2: 0  [0x7c+0x4]
  ▾ DX10 header  [0x80+0x14]
      dxgiFormat: BC7_UNORM (0x62)  [0x80+0x4]
      resourceDimension: TEXTURE2D (0x3)  [0x84+0x4]
      miscFlag: 0x0 []  [0x88+0x4]
      arraySize: 2  [0x8c+0x4]
      miscFlags2: OPAQUE (0x3)  [0x90+0x4]
  ▾ Surfaces — 2 × 2 levels  [0x94+0xa0]
      Surface 0, level 0 — 8×8, 0x40 bytes  [0x94+0x40]
      Surface 0, level 1 — 4×4, 0x10 bytes  [0xd4+0x10]
      Surface 1, level 0 — 8×8, 0x40 bytes  [0xe4+0x40]
      Surface 1, level 1 — 4×4, 0x10 bytes  [0x124+0x10]
