tests/snapshots/formats__dds__bgra.dds.snap
---
source: tests/formats.rs
expression: "common::explore(&name, &data)"
---
▾ bgra.dds — 3×2, 32-bit uncompressed  [0x0+0x98]
  ▾ Header  [0x0+0x80]
      Magic: "DDS "  [0x0+0x4]
      dwSize: 124  [0x4+0x4]
      dwFlags: 0x100f [CAPS | HEIGHT | WIDTH | PITCH | PIXELFORMAT]  [0x8+0x4]
      dwHeight: 2  [0xc+0x4]
      dwWidth: 3  [0x10+0x4]
      dwPitchOrLinearSize: 12  [0x14+0x4]
      dwDepth: 0  [0x18+0x4]
      dwMipMapCount: 0  [0x1c+0x4]
      dwReserved1: 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 …  |................|  [0x20+0x2c]
      ddspf.dwSize: 32  [0x4c+0x4]
      ddspf.dwFlags: 0x41 [ALPHAPIXELS | RGB]  [0x50+0x4]
      ddspf.dwFourCC: ""  [0x54+0x4]
      ddspf.dwRGBBitCount: 32  [0x58+0x4]
      ddspf.dwRBitMask: 0xff0000  [0x5c+0x4]
      ddspf.dwGBitMask: 0xff00  [0x60+0x4]
      ddspf.dwBBitMask: 0xff  [0x64+0x4]
      ddspf.dwABitMask: 0xff000000  [0x68+0x4]
      dwCaps: 0x1000 [TEXTURE]  [0x6c+0x4]
      dwCaps2: 0x0 []  [0x70+0x4]
      dwCaps3: 0  [0x74+0x4]
      dwCaps4: 0  [0x78+0x4]
      dwReserved2: 0  [0x7c+0x4]
  ▾ Surfaces — 1 × 1 levels  [0x80+0x18]
      Level 0 — 3×2, 0x18 bytes  [0x80+0x18]
