tests/snapshots/formats__dds__dxt1-mips.dds.snap
---
source: tests/formats.rs
expression: "common::explore(&name, &data)"
---
▾ dxt1-mips.dds — 8×8, BC1 (DXT1), 4 mip levels  [0x0+0xb8]
  ▾ Header  [0x0+0x80]
      Magic: "DDS "  [0x0+0x4]
      dwSize: 124  [0x4+0x4]
      dwFlags: 0xa1007 [CAPS | HEIGHT | WIDTH | PIXELFORMAT | MIPMAPCOUNT | LINEARSIZE]  [0x8+0x4]
      dwHeight: 8  [0xc+0x4]
      dwWidth: 8  [0x10+0x4]
      dwPitchOrLinearSize: 32  [0x14+0x4]
      dwDepth: 0  [0x18+0x4]
      dwMipMapCount: 4  [0x1c+0x4]
      dwReserved1: 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 …  |................|  [0x20+0x2c]
      ddspf.dwSize: 32  [0x4c+0x4]
      ddspf.dwFlags: 0x4 [FOURCC]  [0x50+0x4]
      ddspf.dwFourCC: "DXT1"  [0x54+0x4]
      ddspf.dwRGBBitCount: 0  [0x58+0x4]
      ddspf.dwRBitMask: 0x0  [0x5c+0x4]
      ddspf.dwGBitMask: 0x0  [0x60+0x4]
      ddspf.dwBBitMask: 0x0  [0x64+0x4]
      ddspf.dwABitMask: 0x0  [0x68+0x4]
      dwCaps: 0x401008 [COMPLEX | TEXTURE | MIPMAP]  [0x6c+0x4]
      dwCaps2: 0x0 []  [0x70+0x4]
      dwCaps3: 0  [0x74+0x4]
      dwCaps4: 0  [0x78+0x4]
      dwReserved2: 0  [0x7c+0x4]
  ▾ Surfaces — 1 × 4 levels  [0x80+0x38]
      Level 0 — 8×8, 0x20 bytes  [0x80+0x20]
      Level 1 — 4×4, 0x8 bytes  [0xa0+0x8]
      Level 2 — 2×2, 0x8 bytes  [0xa8+0x8]
      Level 3 — 1×1, 0x8 bytes  [0xb0+0x8]
